system/configs/base/rustfs-dev/route.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: rustfs-route
  namespace: rustfs
spec:
  parentRefs:
    - name: traefik-gateway
      namespace: traefik
  hostnames:
    - rustfs.localho.st
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: rustfs
          port: 9001
